fix: allow scrolling in viz type selector [DHIS2-16790] (#3439)
Prevents the visualization type selector from getting pushed up and out of place in short screens.

--- a/src/components/VisualizationTypeSelector/styles/VisualizationTypeSelector.module.css
+++ b/src/components/VisualizationTypeSelector/styles/VisualizationTypeSelector.module.css
@@ -42,7 +42,9 @@
 }
 
 .listContainer {
-    max-inline-size: 888px;
+    max-block-size: 85vh;
+    overflow: scroll;
+    max-inline-size: 896px;
     box-shadow: var(--elevations-e400);
     border-radius: 3px;
     padding-block-start: 12px;
